- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.14.2
- 
    Linux - Ubuntu 18.10
- 
        7bae846e71ef168f8c9160298eeac1f6bc793d39 (qt/qtwebengine/5.15.0)
When using CTRL+wheel it does not have any effect with the zoom inside WebEngineView, it works fine inside Chrome and Firefox but has no effect inside a WebEngineView. This can be reproduced with the quicknanobrowser example.
| For Gerrit Dashboard: QTBUG-83656 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 297598,4 | Implement WebContentsDelegate::ContentsZoomChange | 5.15.0 | qt/qtwebengine | Status: MERGED | +2 | 0 |