Implement WebContentsDelegate::ContentsZoomChange

Needed to do wheel zoom.

Fixes: QTBUG-83656
Change-Id: I97d96585b7f760487daa292ad279805007c5095e
Reviewed-by: Michael Brüning <michael.bruning@qt.io>